--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#4ab9ad</color>
-    <color name="colorPrimaryDark">#4e9e93</color>
+    <color name="colorPrimaryDark">#25524b</color>
     <color name="colorAccent">#f65f1e</color>
 </resources>
